--- a/device42-script/credentials.cfg
+++ b/device42-script/credentials.cfg
@@ -1,3 +1,8 @@
 [credentials]
 USER=admin
 PASSWORD=adm!nd42
+BASE_URL = https://172.20.5.47
+BUILDINGS_URL =https://172.20.5.47/api/1.0/buildings/
+ROOMS_URL=https://172.20.5.47/api/1.0/rooms/
+RACKS_URL=https://172.20.5.47/api/1.0/racks/
+DEVICES_URL=https://172.20.5.47/api/1.0/devices/
