--- a/device42-script/credentials.cfg
+++ b/device42-script/credentials.cfg
@@ -6,3 +6,5 @@ BUILDINGS_URL =https://172.20.5.47/api/1.0/buildings/
 ROOMS_URL=https://172.20.5.47/api/1.0/rooms/
 RACKS_URL=https://172.20.5.47/api/1.0/racks/
 DEVICES_URL=https://172.20.5.47/api/1.0/devices/
+DEVICES_RACK_URL=https://172.20.5.47/api/1.0/device/rack/
+HARDWARE_MODEL=https://172.20.5.47/api/1.0/hardwares/
