--- a/device42-script/credentials.cfg
+++ b/device42-script/credentials.cfg
@@ -1,10 +1,11 @@
 [credentials]
 USER=admin
-PASSWORD=adm!nd42
-BASE_URL = https://172.20.5.47
-BUILDINGS_URL =https://172.20.5.47/api/1.0/buildings/
-ROOMS_URL=https://172.20.5.47/api/1.0/rooms/
-RACKS_URL=https://172.20.5.47/api/1.0/racks/
-DEVICES_URL=https://172.20.5.47/api/1.0/devices/
-DEVICES_RACK_URL=https://172.20.5.47/api/1.0/device/rack/
-HARDWARE_MODEL=https://172.20.5.47/api/1.0/hardwares/
+PASSWORD=admnd42
+BASE_URL = https://10.0.0.12
+BUILDINGS_URL =https://10.0.0.12/api/1.0/buildings/
+ROOMS_URL=https://10.0.0.12/api/1.0/rooms/
+RACKS_URL=https://10.0.0.12/api/1.0/racks/
+DEVICES_URL=https://10.0.0.12/api/1.0/devices/
+DEVICES_RACK_URL=https://10.0.0.12/api/1.0/device/rack/
+HARDWARE_MODEL=https://10.0.0.12/api/1.0/hardwares/
+IS_CACHE=True
