--- a/device42-script/credentials.cfg
+++ b/device42-script/credentials.cfg
@@ -1,6 +1,6 @@
 [credentials]
 USER=admin
-PASSWORD=admnd42
+PASSWORD=adm!nd42
 BASE_URL = https://10.0.0.12
 BUILDINGS_URL =https://10.0.0.12/api/1.0/buildings/
 ROOMS_URL=https://10.0.0.12/api/1.0/rooms/
