--- a/device42-script/credentials.cfg
+++ b/device42-script/credentials.cfg
@@ -8,7 +8,7 @@ RACKS_URL=https://10.0.0.12/api/1.0/racks/
 DEVICES_URL=https://10.0.0.12/api/1.0/devices/
 DEVICES_RACK_URL=https://10.0.0.12/api/1.0/device/rack/
 HARDWARE_MODEL=https://10.0.0.12/api/1.0/hardwares/
-IS_CACHE=True
+IS_CACHE=False
 BUILDINGS_CACHE=/cache/buildings_cache.json
 ROOMS_CACHE=/cache/rooms_cache.json
 RACKS_CACHE=/cache/racks_cache.json
